--- a/.ssh/config
+++ b/.ssh/config
@@ -58,3 +58,22 @@ HostName ec2-13-58-78-42.us-east-2.compute.amazonaws.com
 Port 22
 User ubuntu
 IdentityFile /Users/traeyee/Documents/Nutstore/vmshare/Second.pem
+
+Host gitr
+    Hostname git.byted.org
+    Port 29418
+    User cuiyi
+Host git.byted.org
+    Hostname git.byted.org
+    Port 29418
+    User cuiyi
+Host review.byted.org
+    Hostname git.byted.org
+    Port 29418
+    User cuiyi
+Host code.byted.org
+    Hostname  code.byted.org
+    Port 29418
+    User cuiyi
+Host *.byted.org
+    GSSAPIAuthentication yes
