--- a/.ssh/config
+++ b/.ssh/config
@@ -53,6 +53,11 @@ HostName 10.6.131.76
 Port 22
 User cuiyi
 
+Host devbox
+HostName 10.8.121.188
+Port 22
+User cuiyi
+
 Host aws
 HostName ec2-13-58-78-42.us-east-2.compute.amazonaws.com
 Port 22
